--- a/Bodyguard/Assets/index.html
+++ b/Bodyguard/Assets/index.html
@@ -52,7 +52,7 @@
             <div class="card">
                 <img alt="vision icon" src="images/Vision.PNG">
                 <h3>Vision</h3>
-                <p>Ser la empresa más valorada del mercado con respecto al negocio de la seguridad, en la cual los clientes sepan cuál es su primera opción si es que se sienten inseguros o en peligro.</p>
+                <p>Ser la empresa más valorada del mercado con respecto al negocio de la seguridad, en la cual los clientes conocen cuál es su primera opción si es que se sienten inseguros o en peligro.</p>
             </div>
         </div>
     </section>
